# qemu

./: .gitignore  .gitmodules  config.emulation  config.timing  config.trace  configure  cpus.c  hmp-commands.hx  hmp.c  hmp.h  meson.build  monitor.c  qemu-options.hx  qmp.c  vl.c
.github/workflows/: docker.yml
accel/tcg/: cpu-exec.c  helper-arch.c  meson.build  tcg-accel-ops-rr.c
contrib/plugins/: Makefile  byte-size-dist.c  cache-inclusive-parallel.c  cache-inclusive.c  cache-parallel.h  cache-sim-naked.c  cache-sim.c  characterization.c  empty-callback.c  gen-pc-stream.c  inst-trace-arm.c  inst-trace-bytes.c  inst-trace.c  print-specific-byte.c
contrib/plugins/trace-plug/: Cargo.toml
contrib/plugins/trace-plug/include/: qemu-plugin.h
contrib/plugins/trace-plug/src/: breakdown.rs  lib.rs  main.rs  qemu_plugin.rs
docker/: Dockerfile  Dockerfile.sim
include/exec/: cpu-all.h  helper-arch-qemu-calls.h  helper-arch-tcg.h  helper-arch.h
include/monitor/: hmp.h
include/qemu/: log.h  plugin.h  qemu-plugin.h
include/qflex/: qflex-arch.h  qflex-config.h  qflex-helper-a64.h  qflex-hmp.h  qflex-log.h  qflex-qmp.h  qflex-traces.h  qflex.h
include/qflex/devteroflex/: demand-paging.h  devteroflex-mmu.h  devteroflex.h  devteroflex.pb-c.h  emulation-logger.h
include/qflex/devteroflex/aws/: fpga_interface.h
include/qflex/devteroflex/simulation/: fpga_interface.h
include/sysemu/: dma.h  sysemu.h
migration/: savevm-ext.c
plugins/: api.c  core.c
softmmu/: icount.c  vl.c
util/: meson.build
util/qflex/: Makefile.objs  qflex-config.c  qflex-hmp.c  qflex-log.c  qflex-qmp.c  qflex-traces.c  qflex.c
util/qflex/devteroflex/: demand-paging.c  devteroflex.c  devteroflex.pb-c.c  devteroflex.proto  file-ops.c  fpga  inverted-page-table.c  meson.build  mmu.c  physical-addr-manager.c  rust-aux-mm.h  rust_aux.rs  shadow-page-table.c  temporal-page-table.c
util/qflex/devteroflex/simulation/: fpga_interface.c  ipc.c
